--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@ luac.out
 *.x86_64
 *.hex
 
+.tup
+logs/
+conf/
+nginx.conf
+nginx.conf.compiled
+mime.types
+proxy_temp/
+fastcgi_temp/
+client_body_temp/
+scgi_temp/
+uwsgi_temp/
+*.rockspec
+*.rock
