--- a/dockerfiles/usr/local/openresty/nginx/sites-enabled/server.conf
+++ b/dockerfiles/usr/local/openresty/nginx/sites-enabled/server.conf
@@ -16,8 +16,8 @@ server {
     content_by_lua_file 					 /app/lib/moonship/nginx/content.lua;
   }
 
-  # proxy pass to github for code
-  location /__ghraw {
+  # proxy pass to user lib
+  location /__libpublic {
     internal;
     set                            $clean_url "";
     set_unescape_uri               $clean_url $arg_url;
@@ -36,7 +36,7 @@ server {
 
   # proxy pass to s3 for code
   # keep this separate from githubraw for security purpose
-  location /__code {
+  location /__libprivate {
    internal;
     set                            $clean_url "";
     set_unescape_uri               $clean_url $arg_url;
