--- a/dockerfiles/usr/local/openresty/nginx/sites-enabled/server.conf
+++ b/dockerfiles/usr/local/openresty/nginx/sites-enabled/server.conf
@@ -1,3 +1,6 @@
+proxy_cache_path /tmp/nginx/cache/code/public levels=1:2 keys_zone=codepublic:10m max_size=1g inactive=45m use_temp_path=off;
+proxy_cache_path /tmp/nginx/cache/code/private levels=1:2 keys_zone=codeprivate:10m max_size=1g inactive=45m use_temp_path=off;
+
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
@@ -10,9 +13,14 @@ server {
   proxy_pass_header                P3P;
   proxy_cache_min_uses             2;
 
+  lua_shared_dict                  moonship_cache 10M;
+  lua_shared_dict                  moonship_storage 1M;
+
   set                              $cb ""; # for cache busting
+
   location / {
     default_type                   text/plain;
+    access_by_lua_file  					 /app/lib/moonship/nginx/access.lua;
     content_by_lua_file 					 /app/lib/moonship/nginx/content.lua;
   }
 
@@ -22,7 +30,7 @@ server {
     set                            $clean_url "";
     set_unescape_uri               $clean_url $arg_url;
 
-    proxy_cache                    githubraw;
+    proxy_cache                    codepublic;
     proxy_pass                     $clean_url;
     proxy_cache_key                $clean_url$cb$slice_range;
     include                        proxy-hide-headers.common;
@@ -32,16 +40,19 @@ server {
 
     # only allow GET method
     proxy_method                   GET;
+
+    # proxy with 1.1
+    proxy_http_version             1.1;
   }
 
   # proxy pass to s3 for code
-  # keep this separate from githubraw for security purpose
+  # keep this separate from libpublic for security purpose
   location /__libprivate {
    internal;
     set                            $clean_url "";
     set_unescape_uri               $clean_url $arg_url;
 
-    proxy_cache                    codestorage;
+    proxy_cache                    codeprivate;
     proxy_pass                     $clean_url;
     proxy_cache_key                $clean_url$cb$slice_range;
     include                        proxy-hide-headers.common;
@@ -52,5 +63,8 @@ server {
 
     # only allow GET method
     proxy_method                   GET;
+
+    # proxy with 1.1
+    proxy_http_version             1.1;
   }
 }
