--- a/dockerfiles/usr/local/openresty/nginx/sites-enabled/server.conf
+++ b/dockerfiles/usr/local/openresty/nginx/sites-enabled/server.conf
@@ -1,6 +1,9 @@
 proxy_cache_path /tmp/nginx/cache/code/public levels=1:2 keys_zone=codepublic:10m max_size=1g inactive=45m use_temp_path=off;
 proxy_cache_path /tmp/nginx/cache/code/private levels=1:2 keys_zone=codeprivate:10m max_size=1g inactive=45m use_temp_path=off;
 
+lua_shared_dict                  moonship_cache 10M;
+lua_shared_dict                  moonship_storage 1M;
+
 server {
   listen 80 default_server;
   listen [::]:80 default_server;
@@ -13,13 +16,12 @@ server {
   proxy_pass_header                P3P;
   proxy_cache_min_uses             2;
 
-  lua_shared_dict                  moonship_cache 10M;
-  lua_shared_dict                  moonship_storage 1M;
-
   set                              $cb ""; # for cache busting
 
   location / {
     default_type                   text/plain;
+
+    set                            $cb $arg_cb;
     access_by_lua_file  					 /app/lib/moonship/nginx/access.lua;
     content_by_lua_file 					 /app/lib/moonship/nginx/content.lua;
   }
