--- a/rootfs/app-start/conf/nginx.conf
+++ b/rootfs/app-start/conf/nginx.conf
@@ -8,8 +8,8 @@ worker_rlimit_nofile                65535;
 # passthrough env vars
 # AWS S3 code repo config
 env AWS_DEFAULT_REGION;
-env AWS_ACCESS_KEY_ID;
-env AWS_SECRET_ACCESS_KEY;
+env AWS_S3_KEY_ID;
+env AWS_S3_ACCESS_KEY;
 env AWS_S3_CODE_PATH;
 
 # access by lua
@@ -57,16 +57,16 @@ http {
 
     # Log format
     log_format  main                '$remote_addr - $remote_user [$time_local] "$request" '
-                                    '$status $body_bytes_sent "$http_referer" '
-                                    '"$http_user_agent" "$http_x_forwarded_for"';
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
     log_format  better              '-= ngx: $status $request_method $scheme://$host$request_uri $request_time '
-                                    '$remote_addr $body_bytes_sent "$http_referer" '
-                                    '"$http_user_agent" "$http_x_forwarded_for"';
+    '$remote_addr $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log                      /app/log/nginx/access.log better;
 
     # Mime settings
-    include                         /usr/local/openresty/nginx/conf/mime.types;
+    include                         /app/conf/mime.types;
     default_type                    application/octet-stream;
 
     # Compression settings - aggressively cache text file types
@@ -81,7 +81,7 @@ http {
 
     # SSL PCI Compliance
     ssl_session_cache               shared:SSL:10m;
-    ssl_protocols                   TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_protocols                   TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers       on;
     ssl_ciphers                     "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK";
 
@@ -101,8 +101,6 @@ http {
     log_subrequest                  on;
     rewrite_log                     on;
 
-	include							/app/conf/cdn-ips.conf;
-
     # Other settings
     resolver                        8.8.8.8 8.8.4.4;
 
@@ -110,7 +108,7 @@ http {
     proxy_set_header                X-Real-IP       $remote_addr;
     proxy_set_header                X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_ssl_server_name           on;
-	proxy_intercept_errors          on;
+    proxy_intercept_errors          on;
 
     proxy_connect_timeout           30s;
     proxy_send_timeout              30s;
@@ -126,9 +124,10 @@ http {
 
     # see https://github.com/openresty/lua-resty-core
     init_by_lua '
-        require "resty.core"
+    require "resty.core"
     ';
 
     # Wildcard include
+    include                         /app/conf/conf.d/*;
     include                         /app/conf/sites-enabled/*;
 }
