--- a/rootfs/app-start/conf/sites-enabled/server.conf
+++ b/rootfs/app-start/conf/sites-enabled/server.conf
@@ -36,7 +36,7 @@ server {
 	# proxy pass to user lib
 	location /__libpublic {
 		internal;
-		set_unescape_uri               	$clean_url "$arg_url";
+		set_unescape_uri               	$clean_url "$arg_target";
 
 		proxy_cache                    	codepublic;
 		proxy_pass                     	$clean_url;
@@ -50,7 +50,7 @@ server {
 	# keep this separate from libpublic for security purpose
 	location /__libprivate {
 		internal;
-		set_unescape_uri               	$clean_url "$arg_url";
+		set_unescape_uri               	$clean_url "$arg_target";
 
 		proxy_cache                    	codeprivate;
 		proxy_pass                     	$clean_url;
