--- a/rootfs/app-start/conf/nginx.conf
+++ b/rootfs/app-start/conf/nginx.conf
@@ -10,7 +10,7 @@ worker_rlimit_nofile                65535;
 env AWS_DEFAULT_REGION;
 env AWS_S3_KEY_ID;
 env AWS_S3_ACCESS_KEY;
-env AWS_S3_CODE_PATH;
+env AWS_S3_PATH;
 
 # access by lua
 env MOONSHIP_HOST_REGEX;
