--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         environment:
             - "AWS_S3_KEY_ID=${AWS_S3_KEY_ID}"
             - "AWS_S3_ACCESS_KEY=${AWS_S3_ACCESS_KEY}"
-            - "AWS_S3_CODE_PATH=${AWS_S3_CODE_PATH}"
+            - "AWS_S3_PATH=${AWS_S3_PATH}"
             - "AZURE_STORAGE=${AZURE_STORAGE}"
         ports:
             - "80:80"
