allow for auto ssl staging

--- a/rootfs/usr/local/openresty/nginx/conf/app/inc/server-common.conf
+++ b/rootfs/usr/local/openresty/nginx/conf/app/inc/server-common.conf
@@ -1,1 +1,23 @@
-limit_req zone=perip burst=100 nodelay;
+limit_req zone=perip burst=20 nodelay;
+
+location /__proxy {
+  internal;
+  set_unescape_uri                $clean_url "$arg_target";
+
+  proxy_pass                      $clean_url;
+  proxy_cache_key                 $clean_url;
+
+  # small cache to help prevent hammering of backend
+  proxy_cache_valid               any 10s;
+}
+
+location /__private {
+  internal;
+  set_unescape_uri                $clean_url "$arg_target";
+
+  proxy_pass                      $clean_url;
+  proxy_cache_key                 "private$clean_url";
+
+  # small cache to help prevent hammering of backend
+  proxy_cache_valid               any 10s;
+}
