--- a/rootfs/usr/local/openresty/nginx/conf/nginx.conf
+++ b/rootfs/usr/local/openresty/nginx/conf/nginx.conf
@@ -4,9 +4,11 @@ worker_rlimit_nofile    65535;
 pid                     /var/run/nginx.pid;
 #error_log               /usr/local/openresty/nginx/logs/error.log info;
 error_log               /usr/local/openresty/nginx/logs/error.log crit;
-load_module             "modules/ngx_http_geoip_module.so";
+#load_module             "modules/ngx_http_geoip_module.so";
 
 # passthrough env vars
+env LETSENCRYPT_URL;
+
 # AWS S3 config
 env AWS_DEFAULT_REGION;
 env AWS_S3_KEY_ID;
