--- a/rootfs/usr/local/openresty/nginx/conf/app/10-main.conf
+++ b/rootfs/usr/local/openresty/nginx/conf/app/10-main.conf
@@ -13,18 +13,17 @@ default_type                image/gif;
 
 # SSL PCI Compliance
 ssl_session_cache           shared:SSL:10m;
-ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
+ssl_protocols               TLSv1.1 TLSv1.2; # TLSv1 prevented for PCI-DSS compliance
 ssl_prefer_server_ciphers   on;
-ssl_ciphers                 "EECDH+AESGCM:EDH+AESGCM:ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:DHE-RSA-AES128-GCM-SHA256:AES256+EDH:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+ssl_ciphers                 "EECDH+AESGCM+AES128:EECDH+AESGCM+AES256:EDH+AESGCM+AES128:EDH+AESGCM+AES256:EECDH+SHA256+AES128:EECDH+SHA384+AES256:EDH+SHA256+AES128:EDH+SHA256+AES256:EECDH+SHA1+AES128:EECDH+SHA1+AES256:EDH+SHA1+AES128:EDH+SHA1+AES256:EECDH+HIGH:EDH+HIGH:AESGCM+AES128:AESGCM+AES256:SHA256+AES128:SHA256+AES256:SHA1+AES128:SHA1+AES256:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!KRB5:!aECDH:!3DES";
 
 # A DNS resolver must be defined for OSCP stapling to function.
 resolver                    8.8.8.8 8.8.4.4;
 
-geoip_city                  /usr/local/openresty/nginx/conf/app/GeoLiteCity.dat;
 access_log                  off;
 log_not_found               off;
 
-limit_req_zone $binary_remote_addr zone=perip:10m rate=100r/s;
+limit_req_zone $binary_remote_addr zone=perip:100m rate=20r/s;
 
 log_format main "$time_iso8601|"
   "$request_method|"
