fix docker build

--- a/rootfs/usr/local/openresty/nginx/conf/app/10-main.conf
+++ b/rootfs/usr/local/openresty/nginx/conf/app/10-main.conf
@@ -1,15 +1,27 @@
 lua_package_path "/usr/local/openresty/nginx/conf/app/src/?.lua;;";
 
-sendfile                    on;
-client_max_body_size        64k;
-send_timeout                65;
-keepalive_timeout           65;
-reset_timedout_connection   on;
+# Main settings
+sendfile                        on;
+tcp_nopush                      on;
+tcp_nodelay                     on;
+client_header_timeout           1m;
+client_body_timeout             1m;
+client_header_buffer_size       2k;
+client_body_buffer_size         256k;
+client_max_body_size            50m;
+large_client_header_buffers     4   8k;
+send_timeout                    30;
+keepalive_timeout               60 60;
+reset_timedout_connection       on;
+server_tokens                   off;
+server_name_in_redirect         off;
+server_names_hash_max_size      512;
+server_names_hash_bucket_size   512;
 
 # Mime settings
 include                     mime.types;
 charset                     utf-8;
-default_type                image/gif;
+default_type                text/plain;
 
 # SSL PCI Compliance
 ssl_session_cache           shared:SSL:10m;
@@ -20,10 +32,31 @@ ssl_ciphers                 "EECDH+AESGCM+AES128:EECDH+AESGCM+AES256:EDH+AESGCM+
 # A DNS resolver must be defined for OSCP stapling to function.
 resolver                    8.8.8.8 8.8.4.4;
 
-access_log                  off;
-log_not_found               off;
+# Compression settings - aggressively cache text file types
+gzip                            on;
+gzip_comp_level                 9;
+gzip_min_length                 512;
+gzip_buffers                    8 64k;
+gzip_types                      text/plain text/css text/javascript text/js text/xml application/json application/javascript application/x-javascript application/xml application/xml+rss application/x-font-ttf image/svg+xml font/opentype;
+gzip_proxied                    any;
+gzip_disable "MSIE [1-6]\.";
 
-limit_req_zone $binary_remote_addr zone=perip:100m rate=20r/s;
+# Cache bypass
+map $http_cookie $no_cache {
+    default 0;
+    ~SESS 1;
+    ~wordpress_logged_in 1;
+}
+
+# File cache settings
+open_file_cache                  max=20000 inactive=20s;
+open_file_cache_valid            60s;
+open_file_cache_min_uses         2;
+open_file_cache_errors           off;
+
+# Other settings
+log_subrequest on;
+rewrite_log    on;
 
 log_format main "$time_iso8601|"
   "$request_method|"
@@ -43,3 +76,5 @@ log_format main "$time_iso8601|"
   "$scheme|"
   "$server_name|"
   "$server_addr";
+
+limit_req_zone $binary_remote_addr zone=perip:100m rate=20r/s;
