--- a/rootfs/usr/local/openresty/nginx/conf/app/20-auto-ssl.conf
+++ b/rootfs/usr/local/openresty/nginx/conf/app/20-auto-ssl.conf
@@ -9,7 +9,9 @@ lua_shared_dict auto_ssl 10m;
 lua_shared_dict auto_ssl_settings 64k;
 
 # Initial setup tasks.
-init_by_lua_file "/usr/local/openresty/nginx/app/src/moonship/nginx/init.lua"
+init_by_lua_block {
+    require('mooncrafts.nginx.initblock').init()
+}
 
 init_worker_by_lua_block {
     auto_ssl:init_worker()
