--- a/rootfs/usr/local/openresty/nginx/conf/app/inc/server-common.conf
+++ b/rootfs/usr/local/openresty/nginx/conf/app/inc/server-common.conf
@@ -9,6 +9,7 @@ location /__proxy {
 
   # small cache to help prevent hammering of backend
   proxy_cache_valid               any 10s;
+  proxy_pass_request_headers      off;
 }
 
 location /__private {
