--- a/rootfs/usr/local/openresty/nginx/conf/nginx.conf
+++ b/rootfs/usr/local/openresty/nginx/conf/nginx.conf
@@ -1,3 +1,4 @@
+# file has minimal settings so we can make update in app/*.conf
 user                    nginx;
 worker_processes        auto;
 worker_rlimit_nofile    65535;
@@ -16,11 +17,11 @@ env AWS_S3_ACCESS_KEY;
 env AWS_S3_PATH;
 
 # app stuff
-env BASE_HOST; # the cname base host, i.e. yourserver.com
+env BASE_HOST; # the last two tld parts of your host cname, i.e. your.cname.yourserver.com -> yourserver.com
 
 # Worker config
 events {
-    worker_connections  8192;
+    worker_connections  16384;
     use                 epoll;
     multi_accept        on;
 }
